--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 html {
     height: 100%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body {
