--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -14,8 +14,13 @@ body {
     min-height: 100%;
     margin: 0;
 
-    display: grid;
-    justify-items: center;
+    display: flex;
+
+    height: 100%;
+    width: 100%;
+
+    color: #e1e1e1; 
+    fill: #e1e1e1;
 }
 
 .grid {
@@ -23,41 +28,44 @@ body {
     width: 100%; 
     /*background-color: #282828;*/
     height: 100%;
+    position: relative;
+    flex-grow: 1;
+    overflow: hidden;
 }
 
-.grid::before {
+body::before {
     content: "";
     position: absolute;
     inset: 0;
+    z-index: -1;
 
     background-color: #282828;
     filter: url(#noise);
 }
 
-widget-container{
-    color: #e1e1e1;
+:not(:defined) {
+    visibility: hidden;
 }
 
-/*
-.grid-stack-item.ui-draggable-dragging .grid-stack-item-content,
-.grid-stack-item-content:hover {
-    background-image: linear-gradient(0deg, rgba(255,255,255,0.4), rgba(255,255,255,0.4))!important;
-}
-*/
 
-.item-container {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-    padding: 1rem 2rem;
-    background-color: #333;
-    color: #fff;
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    background: darkslategrey;
+    justify-content: flex-start;
+    align-items: center;
+    overflow: hidden;
+}
+
+.sidebar button {
+    height: 3em;
+    width: 3em;
+
+    margin: 0;
+    padding: 0;
+
+    background-color: transparent;
+
     border: 0;
-  
-    transition: all 200ms ease;
-    
-}
-
-.item-container {
-    display: block;
-    position: absolute;
-    inset: 4px;
+    margin-top: auto;
 }
