decomposed context menu

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -54,7 +54,6 @@ body::before {
     background: darkslategrey;
     justify-content: flex-start;
     align-items: center;
-    overflow: hidden;
 }
 
 .sidebar button {
@@ -68,4 +67,5 @@ body::before {
 
     border: 0;
     margin-top: auto;
+    margin-bottom: 0.5em;
 }
