--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -54,18 +54,34 @@ body::before {
     background: darkslategrey;
     justify-content: flex-start;
     align-items: center;
+
+    gap: 0.25em;
 }
 
 .sidebar button {
+    padding: 0.4em;
+
     height: 3em;
     width: 3em;
 
     margin: 0;
-    padding: 0;
 
     background-color: transparent;
 
     border: 0;
+
+    font-size: inherit;
+}
+
+.sidebar button:active {
+    background-color: rgba(0,0,0,0.1);
+}
+
+.sidebar button.last {
     margin-top: auto;
-    margin-bottom: 0.5em;
+}
+
+.sidebar svg {
+    height: 100%;
+    width: 100%;
 }
